src/core/kubernetes-manifests/deployment.yaml
apiVersion: apps/v1beta1 # for versions before 1.8.0 use apps/v1beta1
kind: Deployment
metadata:
  name: premierpredictor-deployment
spec:
  selector:
    matchLabels:
      app: premierpredictor-app
  replicas: 3 # tells deployment to run 3 pods matching the template
  template:
    metadata:
      labels:
        app: premierpredictor-app
    spec:
      terminationGracePeriodSeconds: 30
      containers:
        - name: premierpredictor-app
          image: gcr.io/prempred2/premierpredictor:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: server
          resources:
            requests:
              memory: "500Mi"
            limits:
              memory: "600Mi"
          readinessProbe:
            httpGet:
              path: /_health
              port: 8080
            initialDelaySeconds: 60
          livenessProbe:
            httpGet:
              path: /_health
              port: 8080
            initialDelaySeconds: 60
