src/core/kubernetes-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: premierpredictor-service
spec:
  ports:
    - port: 8080
      targetPort: 8080
      name: http
  selector:
    app: premierpredictor-app
  type: NodePort
